feat: add translation

--- a/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -10,10 +10,10 @@
     class="btn btn-outline-secondary me-3"
     (click)="closeDialog()"
   >
-    Cancel
+    {{ "cancel" | translate }}
   </button>
 
   <button type="button" class="btn btn-outline-danger" (click)="delete()">
-    Delete
+    {{ "delete" | translate }}
   </button>
 </div>
