--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -4,14 +4,13 @@
       <div class="row d-flex align-items-center">
         <div class="col-md-6 col-12 about-content">
           <h1 class="title">
-            My Project Management application is the success of your team's
-            work.
+            {{ "welcomeAboutTitle" | translate }}
           </h1>
           <h5 class="subtitle mt-4">
-            I bring you the development tool used by agile teams
+            {{ "welcomeAboutSubtitle" | translate }}
           </h5>
           <button class="btn tryItButton mt-3" (click)="openBoards()">
-            Try it
+            {{ "tryIt" | translate }}
           </button>
         </div>
         <div class="col-md-6 col-12 about-image mt-md-0 mt-4">
@@ -25,16 +24,11 @@
     <div class="container">
       <div class="title-wrapper d-flex justify-content-center">
         <h1 class="title text-uppercase text-center px-5 pb-2">
-          What is a kanban board
+          {{ "welcomeInfoTitle" | translate }}
         </h1>
       </div>
       <p class="content text-center px-5 mt-4">
-        A kanban board is an agile project management tool designed to help
-        visualize work, limit work-in-progress, and maximize efficiency (or
-        flow). It can help both agile and DevOps teams establish order in their
-        daily work. Kanban boards use cards, columns, and continuous improvement
-        to help technology and service teams commit to the right amount of work,
-        and get it done!
+        {{ "welcomeInfoSubtitle" | translate }}
       </p>
       <div class="row d-flex align-items-center px-5 mt-5">
         <div class="col-md-6 col-12 info-image">
@@ -42,9 +36,7 @@
         </div>
         <div class="col-md-6 col-12 info-text pl-1 py-1 mt-md-0 mt-3">
           <h5>
-            By dividing the project into small tasks, you simplify the work
-            process and the ability to divide the project between employees of
-            different levels, capabilities and qualifications.
+            {{ "welcomeInfoText" | translate }}
           </h5>
         </div>
       </div>
@@ -54,24 +46,30 @@
   <section class="benefits py-md-5 py-3">
     <div class="container">
       <div class="title-wrapper d-flex justify-content-center">
-        <h1 class="title text-uppercase px-5 pb-2">Your benefits</h1>
+        <h1 class="title text-uppercase px-5 pb-2">
+          {{ "welcomeBenefitsTitle" | translate }}
+        </h1>
       </div>
 
       <h4 class="subtitle text-center mt-3">
-        By managing my project with our application, you get:
+        {{ "welcomeBenefitsSubtitle" | translate }}:
       </h4>
 
       <div class="benefits-list d-flex flex-column mt-5">
-        <div class="benefit w-50">Full control over your project</div>
+        <div class="benefit w-50">{{ "welcomeBenefitOne" | translate }}</div>
         <div class="benefit w-50 right">
-          Unlimited number of tasks in the project
+          {{ "welcomeBenefitTwo" | translate }}
         </div>
-        <div class="benefit w-50">Task scheduling</div>
-        <div class="benefit w-50 right">Control over project performers</div>
+        <div class="benefit w-50">{{ "welcomeBenefitThree" | translate }}</div>
+        <div class="benefit w-50 right">
+          {{ "welcomeBenefitFour" | translate }}
+        </div>
         <div class="benefit w-50">
-          Ability to add and remove tasks at any time
+          {{ "welcomeBenefitFive" | translate }}
         </div>
-        <div class="benefit w-50 right">Ability to save and load projects</div>
+        <div class="benefit w-50 right">
+          {{ "welcomeBenefitSix" | translate }}
+        </div>
       </div>
     </div>
   </section>
@@ -80,29 +78,25 @@
     <div class="container">
       <div class="title-wrapper d-flex justify-content-center">
         <h1 class="title text-uppercase text-center px-5 pb-2">
-          ONLINE COURSE 'DEVELOPMENT WITH ANGULAR'
+          {{ "welcomeRSSTitle" | translate }}
         </h1>
       </div>
 
       <h5 class="subtitle text-center mt-3">
-        This project was made as part of the Angular course from the community
+        {{ "welcomeRSSSubtitle" | translate }}
         <a href="https://rs.school/">The Rolling Scopes</a>
       </h5>
 
       <div class="button-wrapper text-center mt-3">
         <button class="btn rs-signup mx-auto">
-          <a href="https://rs.school/angular/">Sign up</a>
+          <a href="https://rs.school/angular/">{{ "signup" | translate }}</a>
         </button>
       </div>
 
       <div class="rs-info mt-5">
-        <h2>Who is this course for?</h2>
+        <h2>{{ "welcomeRSSForTitle" | translate }}</h2>
         <h5 class="mt-3">
-          The course is intended for RS School 2021Q3 students who have passed
-          RS School stage #2, as well as for new students who have knowledge and
-          practical experience in using the following technologies and tools
-          JavaScript, TypeScript, Git, GitHub, NPM, Webpack, CSS3 / HTML5,
-          Chrome DevTools, Figma, REST API.
+          {{ "welcomeRSSForSubtitle" | translate }}
         </h5>
       </div>
 
@@ -111,42 +105,36 @@
           <div class="col-sm-6 col-12 feature d-flex">
             <fa-icon [icon]="faSackDollar" class="github-logo"></fa-icon>
             <div class="containt">
-              <h3>Free education</h3>
+              <h3>{{ "welcomeRSSFeatureOneTitle" | translate }}</h3>
               <p>
-                The principle of 'Pay it forward' works at RS School. We share
-                our knowledge with students for free now, hoping that in the
-                future they will return to us as mentors and pass on their
-                knowledge to the next generation of students in the same way.
+                {{ "welcomeRSSFeatureOneSubtitle" | translate }}
               </p>
             </div>
           </div>
           <div class="col-sm-6 col-12 feature d-flex mt-sm-0 mt-3">
             <fa-icon [icon]="faClock" class="github-logo"></fa-icon>
             <div class="containt">
-              <h3>Training term: 2 months</h3>
+              <h3>{{ "welcomeRSSFeatureTwoTitle" | translate }}</h3>
               <p>
-                A recording of the webinar will be posted on the school's
-                YouTube channel.
+                {{ "welcomeRSSFeatureTwoSubtitle" | translate }}
               </p>
             </div>
           </div>
           <div class="col-sm-6 col-12 feature d-flex mt-sm-0 mt-3">
             <fa-icon [icon]="faUserGroup" class="github-logo"></fa-icon>
             <div class="containt">
-              <h3>For everyone</h3>
+              <h3>{{ "welcomeRSSFeatureThreeTitle" | translate }}</h3>
               <p>
-                Everyone can study at RS School, regardless of age, professional
-                employment and place of residence.
+                {{ "welcomeRSSFeatureThreeSubtitle" | translate }}
               </p>
             </div>
           </div>
           <div class="col-sm-6 col-12 feature d-flex mt-sm-0 mt-3">
             <fa-icon [icon]="faCertificate" class="github-logo"></fa-icon>
             <div class="containt">
-              <h3>Certificate</h3>
+              <h3>{{ "welcomeRSSFeatureFourTitle" | translate }}</h3>
               <p>
-                A certificate is issued to all those who successfully complete
-                the course.
+                {{ "welcomeRSSFeatureFourSubtitle" | translate }}
               </p>
             </div>
           </div>
@@ -158,7 +146,9 @@
   <section class="author py-md-5 py-3">
     <div class="container">
       <div class="title-wrapper d-flex justify-content-center">
-        <h1 class="title text-uppercase px-5 pb-2">About author</h1>
+        <h1 class="title text-uppercase px-5 pb-2">
+          {{ "welcomeAuthorTitle" | translate }}
+        </h1>
       </div>
     </div>
 
@@ -167,10 +157,8 @@
         <div class="row d-flex align-items-center">
           <div class="col-md-6 col-12 author-info__text">
             <div class="w-75 mx-auto text-center">
-              <strong>Jakhongir Ismoilov.</strong> Junior Frontend Developer
-              with 1+ year of working experience in Frontend Development.
-              Skilled mostly in JavaScript and Vue. Energetic and eager to learn
-              new skills. Clean coding is my priority.
+              <strong>Jakhongir Ismoilov.</strong>
+              {{ "welcomeAuthorInfo" | translate }}
             </div>
           </div>
           <div class="col-md-6 col-12 author-info__image mt-md-0 mt-3">
