--- a/src/app/components/column/column.component.html
+++ b/src/app/components/column/column.component.html
@@ -19,7 +19,7 @@
           type="text"
           class="form-control"
           [ngClass]="titleError ? 'is-invalid' : ''"
-          placeholder="Enter column title"
+          [placeholder]="'enterColumnTitle' | translate"
           #titleInput
           [(ngModel)]="columnTitle"
         />
@@ -55,7 +55,7 @@
             (click)="openEditTitleInput()"
           >
             <fa-icon [icon]="faPen"></fa-icon>
-            <span class="text ms-2">Edit column</span>
+            <span class="text ms-2">{{ "editColumn" | translate }}</span>
           </button>
 
           <button
@@ -64,7 +64,7 @@
             (click)="openDialog()"
           >
             <fa-icon [icon]="faTrash"></fa-icon>
-            <span class="text ms-2">Delete column</span>
+            <span class="text ms-2">{{ "deleteColumn" | translate }}</span>
           </button>
         </div>
       </div>
@@ -85,7 +85,7 @@
       class="btn add-task__btn"
       (click)="open(content); taskUserId = userService.user.id"
     >
-      + Add new task
+      + {{ "addNewTask" | translate }}
     </button>
   </div>
 </div>
@@ -93,43 +93,51 @@
 <ng-template #content let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">
-      {{ isEditingTask ? "Edit a task" : "Create a task" }}
+      {{
+        isEditingTask ? ("editTask" | translate) : ("createTask" | translate)
+      }}
     </h4>
   </div>
 
   <div class="modal-body">
     <div>
-      <label for="taskTitle" class="form-label">Task title:</label>
+      <label for="taskTitle" class="form-label"
+        >{{ "taskTitle" | translate }}:</label
+      >
       <input
         type="text"
         class="form-control"
         [ngClass]="taskTitleError ? 'is-invalid' : ''"
         id="taskTitle"
-        placeholder="Enter task title"
+        [placeholder]="'enterTaskTitle' | translate"
         [(ngModel)]="taskTitle"
       />
       <div *ngIf="taskTitleError" class="text-danger input-error">
-        Please enter valid task title
+        {{ "pleaseEnterValidTaskTitle" | translate }}
       </div>
     </div>
 
     <div class="mt-3">
-      <label for="taskDescription" class="form-label">Task Description:</label>
+      <label for="taskDescription" class="form-label"
+        >{{ "taskDescription" | translate }}:</label
+      >
       <input
         type="text"
         class="form-control"
         [ngClass]="taskDescriptionError ? 'is-invalid' : ''"
         id="taskDescription"
-        placeholder="Enter task description"
+        [placeholder]="'enterTaskDescription' | translate"
         [(ngModel)]="taskDescription"
       />
       <div *ngIf="taskDescriptionError" class="text-danger input-error">
-        Please enter valid task description
+        {{ "pleaseEnterValidTaskDescription" | translate }}
       </div>
     </div>
 
     <div class="mt-3">
-      <label for="taskUser" class="form-label">Assigned user:</label>
+      <label for="taskUser" class="form-label"
+        >{{ "assignedUser" | translate }}:</label
+      >
       <select id="taskUser" class="form-select" [(ngModel)]="taskUserId">
         <option *ngFor="let user of userService.users" [value]="user.id">
           {{ user.name }}
@@ -144,7 +152,7 @@
       class="btn btn-outline-secondary"
       (click)="modal.close()"
     >
-      Cancel
+      {{ "cancel" | translate }}
     </button>
     <button
       *ngIf="isEditingTask"
@@ -152,7 +160,7 @@
       class="btn btn-outline-primary"
       (click)="editTask()"
     >
-      Edit
+      {{ "edit" | translate }}
     </button>
     <button
       *ngIf="!isEditingTask"
@@ -160,7 +168,7 @@
       class="btn btn-outline-primary"
       (click)="createTask()"
     >
-      Ok
+      {{ "ok" | translate }}
     </button>
   </div>
 </ng-template>
