feat: add disable button functionality while loading and create reusable component for user form

--- a/src/app/components/auth-form/auth-form.component.css
+++ b/src/app/components/auth-form/auth-form.component.css
@@ -26,6 +26,9 @@
 .auth-btn:hover {
   opacity: 0.9;
 }
+.aut-btn:disabled {
+  cursor: no-drop;
+}
 
 .auth-switch__btn {
   text-decoration: none;
