feat: add redirects file

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,12 @@
 .header {
+  height: 80px;
   background-color: #1b242f;
   border-bottom: 3px solid #04c2c9;
   user-select: none;
+}
+
+.navbar {
+  height: 100%;
 }
 
 .navbar-brand {
