--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -105,7 +105,7 @@
     <button
       type="button"
       class="btn btn-outline-secondary"
-      (click)="modal.close()"
+      (click)="modal.dismiss()"
     >
       {{ "cancel" | translate }}
     </button>
